--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <nav>
         <ul>
             <li><a href="./read-com-get.html">Read com GET</a></li>
-            <li><a href="./create-com-post.html">Create com Post</a></li>
+            <li><a href="./create-com-post.html">Create com POST</a></li>
+            <li><a href="./update-com-put.html">Update com PUT</a></li>
+            <li><a href="./delete-com-delete.html">Delete com DELETE</a></li>
         </ul>
     </nav>
 </body>
