--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="./create-com-post.html">Create com POST</a></li>
             <li><a href="./update-com-put.html">Update com PUT</a></li>
             <li><a href="./delete-com-delete.html">Delete com DELETE</a></li>
+            <li><a href="./crud.html">CRUD</a></li>
         </ul>
     </nav>
 </body>
